admin/web/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fridge2fork-admin-web
  namespace: default
  labels:
    app: fridge2fork-admin-web
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: fridge2fork-admin-web
  sessionAffinity: None
